--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lachlan Walls",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mariadb": "^2.4.2"
   }
 }
