--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Lachlan Walls",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.4.2"
   }
 }
