--- a/config.json.example
+++ b/config.json.example
@@ -1,6 +1,6 @@
 {
     "sitename": "My Amazing Resource Manager",
-    "logging": true,
+    "logging": false,
     "admin": {
         "username": "admin",
         "password": "admin"
@@ -9,7 +9,7 @@
         "host": "localhost",
         "port": 3306,
         "user": "resource-manager",
-        "password": "O0n4bEsD1IzmN1T2WYyx",
+        "password": "",
         "database": "resource-manager"
     }
 }
